--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.5.0 (unreleased) [beta]
 
+* Version 1.4.2 (released 2010-03-15) [stable]
+
+** i18n: Updated translations.
+
 * Version 1.4.1 (released 2010-02-16) [stable]
 
 ** gsasl: Improve application data throughput.
