--- a/lib/NEWS
+++ b/lib/NEWS
@@ -12,12 +12,21 @@ MIT Kerberos or Heimdal.  Channel bindings or not support yet.
 MIT Kerberos and Heimdal are now treated the same, it appears as if
 they are compatible in modern releases.
 
-** SCRAM: Encode and decode username/authzid properly.
-Before any username/authzid that contained '=' or ',' would not work.
+** DIGEST-MD5: The server code now returns GSASL_OK after the final token.
+
+** API and ABI modifications.
+No changes since last version.
+
+* Version 1.4.4 (released 2010-03-25) [stable]
+
+** SCRAM: Fix build error on platforms without strnlen.
+
+** API and ABI modifications.
+No changes since last version.
+
+* Version 1.4.3 (released 2010-03-25) [stable]
 
 ** SCRAM: Don't read out of bounds when parsing tokens.
-
-** DIGEST-MD5: The server code now returns GSASL_OK after the final token.
 
 ** API and ABI modifications.
 No changes since last version.
