--- a/lib/NEWS
+++ b/lib/NEWS
@@ -15,15 +15,19 @@ they are compatible in modern releases.
 
 ** DIGEST-MD5: The server code now returns GSASL_OK after the final token.
 
-** New error codes for GS2 specific errors.
+** New error codes for GSS-API library errors (used by GS2).
 The error codes are GSASL_GSSAPI_ENCAPSULATE_TOKEN_ERROR,
-GSASL_GSSAPI_DECAPSULATE_TOKEN_ERROR, and
-GSASL_GSSAPI_INQUIRE_MECH_FOR_SASLNAME_ERROR.
+GSASL_GSSAPI_DECAPSULATE_TOKEN_ERROR,
+GSASL_GSSAPI_INQUIRE_MECH_FOR_SASLNAME_ERROR,
+GSASL_GSSAPI_TEST_OID_SET_MEMBER_ERROR, and
+GSASL_GSSAPI_RELEASE_OID_SET_ERROR.
 
 ** API and ABI modifications.
 GSASL_GSSAPI_ENCAPSULATE_TOKEN_ERROR: ADDED.
 GSASL_GSSAPI_DECAPSULATE_TOKEN_ERROR: ADDED.
 GSASL_GSSAPI_INQUIRE_MECH_FOR_SASLNAME_ERROR: ADDED.
+GSASL_GSSAPI_TEST_OID_SET_MEMBER_ERROR: ADDED.
+GSASL_GSSAPI_RELEASE_OID_SET_ERROR: ADDED.
 
 * Version 1.4.4 (released 2010-03-25) [stable]
 
