--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.5.0 (unreleased) [beta]
+* Version 1.5.0 (released 2010-03-31) [beta]
 
 ** GS2-KRB5: New mechanism GS2 with support for Kerberos V5.
 The supported GSS-API implementations are GNU GSS, MIT Kerberos or
